--- a/index.html
+++ b/index.html
@@ -117,21 +117,27 @@
     </main>
 
     <footer class="site-info">
-        <span class="info-content">
-            &copy; Pedro Ryago 2022 - Todos direitos reservados.
-        </span>
-        <ul>
-            <li>
-                <a href="https://github.com/PedroRyago" target="_blank">
-                    <img class="github-link" src="https://cdn3.iconfinder.com/data/icons/inficons/512/github.png" alt="github">
-                </a>
-            </li>
-            <li>
-                <a href="https://linkedin.com/in/pedro-ryago" target="_blank">
-                    <img class="linkedin-link" src="https://cdn.icon-icons.com/icons2/2992/PNG/512/linkedin_logo_icon_187302.png" alt="github">
-                </a>
-            </li>
-        </ul>
+        <div class="info-content">
+            <span>
+                &copy; Pedro Ryago 2022 - Todos direitos reservados. <br>
+            </span>
+            <span>
+                    Redes sociais:
+            </span>
+            <ul>
+                <li>
+                    <a href="https://github.com/PedroRyago" target="_blank">
+                        <img class="github-link" src="https://cdn3.iconfinder.com/data/icons/inficons/512/github.png" alt="github">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://linkedin.com/in/pedro-ryago" target="_blank">
+                        <img class="linkedin-link" src="https://cdn.icon-icons.com/icons2/2992/PNG/512/linkedin_logo_icon_187302.png" alt="github">
+                    </a>
+                </li>
+            </ul>
+        </div>
+
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
