--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                                             <h4>Redes Sociais</h4>
                                             <ul class=" nav flex-column ">
                                                 <li class="nav-item ">
-                                                    <a class="nav-link link-info " href="https://linkedin.com/in/pedro-ryago "><i class="fab fa-linkedin "> Linkedin</i></a>
+                                                    <a class="nav-link link-info " href="https://linkedin.com/in/pedro-ryago" target="_blank"><i class="fab fa-linkedin "> Linkedin</i></a>
                                                 </li>
                                                 <li class="nav-item ">
-                                                    <a class="nav-link link-info " href="https://github.com/PedroRyago "><i class="fab fa-github "> Github</i></a>
+                                                    <a class="nav-link link-info " href="https://github.com/PedroRyago" target="_blank"><i class="fab fa-github "> Github</i></a>
                                                 </li>
                                             </ul>
                                         </section>
@@ -145,7 +145,7 @@
                                                     <a class="nav-link link-info " href="mailto:pedrorbn121@gmail.com "><i class="fa-solid fa-envelope "> Email</i></a>
                                                 </li>
                                                 <li class="nav-item ">
-                                                    <a class="nav-link link-info " href="https://wa.me/5591993872186?text=Ol%C3%A1%2C+Pedro%21 "><i class="fab fa-whatsapp "> Whatsapp</i></a>
+                                                    <a class="nav-link link-info " href="https://wa.me/5591993872186?text=Ol%C3%A1%2C+Pedro%21" target="_blank"><i class="fab fa-whatsapp "> Whatsapp</i></a>
                                                 </li>
                                             </ul>
                                         </section>
