--- a/index.html
+++ b/index.html
@@ -21,14 +21,11 @@
                         <div class="row">
                             <div class="col m-auto p-0">
                                 <nav class="navbar header d-flex flex-column align-items-center justify-content-center ">
-                                    <div class=" row ">
-                                        <div class="col">
-                                            Clique para mudar o tema
-                                        </div>
-                                    </div>
                                     <div class="row ">
                                         <div class="theme-button col">
-                                            <div class="ball"></div>
+                                            <div class="ball ball-icon-container">
+
+                                            </div>
                                         </div>
                                     </div>
 
@@ -123,7 +120,7 @@
                                 </main>
                             </div>
                         </div>
-                        <div class="row mt-auto">
+                        <div class="row mt-auto pt-5">
                             <div class="col m-auto p-0">
                                 <footer class="container footer">
                                     <div class="row pt-3 pb-3 m-auto text-center ">
@@ -131,10 +128,10 @@
                                             <h4>Redes Sociais</h4>
                                             <ul class=" nav flex-column ">
                                                 <li class="nav-item ">
-                                                    <a class="nav-link link-info " href="https://linkedin.com/in/pedro-ryago "><i class="fab fa-linkedin "> Linkedin</i></a>
+                                                    <a class="nav-link link-info " href="https://linkedin.com/in/pedro-ryago" target="_blank"><i class="fab fa-linkedin "> Linkedin</i></a>
                                                 </li>
                                                 <li class="nav-item ">
-                                                    <a class="nav-link link-info " href="https://github.com/PedroRyago "><i class="fab fa-github "> Github</i></a>
+                                                    <a class="nav-link link-info " href="https://github.com/PedroRyago" target="_blank"><i class="fab fa-github "> Github</i></a>
                                                 </li>
                                             </ul>
                                         </section>
@@ -145,7 +142,7 @@
                                                     <a class="nav-link link-info " href="mailto:pedrorbn121@gmail.com "><i class="fa-solid fa-envelope "> Email</i></a>
                                                 </li>
                                                 <li class="nav-item ">
-                                                    <a class="nav-link link-info " href="https://wa.me/5591993872186?text=Ol%C3%A1%2C+Pedro%21 "><i class="fab fa-whatsapp "> Whatsapp</i></a>
+                                                    <a class="nav-link link-info " href="https://wa.me/5591993872186?text=Ol%C3%A1%2C+Pedro%21" target="_blank"><i class="fab fa-whatsapp "> Whatsapp</i></a>
                                                 </li>
                                             </ul>
                                         </section>
@@ -154,7 +151,7 @@
                                         <div class="col ">
                                             <h6>
                                                 © Pedro Ryago 2022 - Todos direitos reservados.
-                                                </h3>
+                                            </h6>
                                         </div>
                                     </div>
                                 </footer>
